# ccpu

./: .gitignore  .gitmodules  LICENSE.txt  README.md
app/: Makefile  SConstruct  alutest.asm  app.yaml  calc.asm  ctest.c  display.asm  display_test.asm  extension.asm  extension.yaml  extension_base.asm  fileshell.na  frame.h  io_test.asm  loader.yaml  main.na  matrix.na  matrix_app.na  matrix_ext.na  memcheck.asm  mkfat.sh  rsim.yaml  shift_test.asm  stack.yaml  test.asm  test.sh  trap.asm  vga_demo.asm
app/calc/: app.na  calc.asm  main.h
app/edit/: edit.na
app/fileshell/: exec.h  exec.na  fileshell.na  loload.asm  loload.h  lorun.asm  lorun.h  progressbar.h  progressbar.na  (+2 more)
boards/: chips.txt  colors.txt
doc/: alu0.json  alu1.json  assembly.md  errata.md  io.md  jc.json  ld.json  ldi.json  st.json  vga.md
model/: adder.v  alu.txt  alu.v  alu_hi.v  alu_lo.v  async_ram.v  chips.txt  control_unit.v  cpu.v  gen-alu.py  gp_reg_a.v  gp_reg_b.v  io.v  pointer_pair.v  pointer_reg.v  ps2.v  ram.v  rom.v  rom_28c256.v  spi.v  stack_control.v  uni_reg.v  vga.v  vga_ctrl.v
tools/: asm.py  expression.py  flip67.py  fontgen.py  fonttemplate.py  gen-alu.py  gen-cu.py  keyboard.py  layout.py  lcd16x2.py  link.py  machine.py  memory.py  natrix.py  object.py  requirements.txt  sim.py
tools/rsim/: Cargo.toml  README.md  rsim.yaml
tools/rsim/src/: card.rs  config.rs  font.rs  index.html  instruction.rs  keyboard.rs  machine.rs  main.rs  mem.rs  memory.rs  plain_ram.rs  ps2.rs  real_mem.rs  server.rs  spi.rs  stack.rs  symmap.rs  system.rs  vga.rs  vga_window.rs  z80.rs
(+445 files in other folders)
