[package]
name = "rsim"
version = "0.1.0"
authors = ["Ivan Mikhailov <imihajlow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
strum = "0.20"
strum_macros = "0.20"
ctrlc = "3.1.8"
parse_int = "0.5.0"
regex = "1"
rand = "0.8"
png = "0.16"
itertools = "0.10"
mio = { version="0.7", features=["net", "os-poll"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
